--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -1,13 +1,13 @@
 [about]
-other = "EN About"
+other = "About"
 [service]
-other = "EN Service"
+other = "Service"
 [portfolio]
-other = "EN Portfolio"
+other = "Portfolio"
 [blog]
-other = "EN Blog"
+other = "News"
 [contact]
-other = "EN Contact"
+other = "Contact"
 
 [graphicdesign]
 other = "EN Graphic Design"
