--- a/i18n/de.toml
+++ b/i18n/de.toml
@@ -1,9 +1,9 @@
 [about]
 other = "Über uns"
 [service]
-other = "Dienstleistungen"
+other = "Leistungen"
 [portfolio]
-other = "Portfolio"
+other = "Partner"
 [blog]
 other = "News"
 [contact]
