--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -3,7 +3,7 @@ other = "About"
 [service]
 other = "Service"
 [portfolio]
-other = "Portfolio"
+other = "Partners"
 [blog]
 other = "News"
 [contact]
